Removed key from project

--- a/.env.testing.example
+++ b/.env.testing.example
@@ -1,6 +1,6 @@
 APP_NAME=GLIDE_MAC_LOOKUP
 APP_ENV=testing
-APP_KEY=base64:7O7BbxTYZLyp01Sp8K2xTEQ24fjp7kS6qoG8yY1F1Fk=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8010
 
@@ -59,4 +59,4 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-API_KEY=7O7BbxTYZLyp01Sp8K2xTEQ24fjp7kS6qoG8yY1F1Fk
+API_KEY=
